Adicionando a função de disparo

--- a/css/style.css
+++ b/css/style.css
@@ -164,5 +164,5 @@ body {
 	width: 50px;
 	height: 8px;
 	position: absolute;
-	background-image: url("../imgs/disparo.pbg");
+	background-image: url("../imgs/disparo.png");
 }
