--- a/css/style.css
+++ b/css/style.css
@@ -178,3 +178,109 @@ body {
 	height: 87px;
 	position: absolute;
 }
+
+#explosao3 {
+	width: 44px;
+	height: 51px;
+	position: absolute;
+}
+
+.anima4 {
+	width: 44px;
+	height: 51px;
+	background-image: url("../imgs/amigo_morte.png");
+	animation: play4 .5s steps(7) infinite;
+	-webkit-animation: play4 .5s steps(7) infinite;
+	-moz-animation: play4 .5s steps(7) infinite;
+	-ms-animation: play4 .5s steps(7) infinite;
+	-o-animation: play4 .5s steps(7) infinite;
+}
+
+@keyframes play4 {
+	from {
+		background-position: 0;
+	}
+	to {
+		background-position: -308px;
+	}
+}
+
+@-webkit-keyframes play4 {
+	from {
+		background-position: 0;
+	}
+	to {
+		background-position: -308px;
+	}
+}
+
+@-moz-keyframes play4 {
+	from {
+		background-position: 0;
+	}
+	to {
+		background-position: -308px;
+	}
+}
+
+@-ms-keyframes play4 {
+	from {
+		background-position: 0;
+	}
+	to {
+		background-position: -308px;
+	}
+}
+
+@-o-keyframes play4 {
+	from {
+		background-position: 0;
+	}
+	to {
+		background-position: -308px;
+	}
+}
+
+
+#placar {
+	width: 450px;
+	height: 50px;
+	position: absolute;
+	left: 5px;
+	top: 590px;
+}
+
+h2 {
+	font-family: Titulo;
+	font-size: 20px;
+	color: #FFF;
+}
+
+#energia {
+	width: 140px;
+	height: 38px;
+	position: absolute;
+	left: 750px;
+	top: 7px;
+}
+
+h3 {
+	font-family: Titulo;
+	font-size: 20px;
+	color: #603A03;
+}
+
+#fim {
+	width: 350px;
+	height: 200px;
+	background-color: #FFF;
+	margin-left: auto;
+	margin-right: auto;
+	margin-top: 100px;
+	text-align: center;
+	padding: 10px;
+}
+
+.pointer {
+	cursor: pointer;
+}
